--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
   }
+
+.item{
+  color: blueviolet;
+  font-size: large;
+  background-color: yellow;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.item-enter {
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  .item-enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in;
   }
-}
+  .item-exit {
+    opacity: 1;
+  }
+  .item-exit-active {
+    opacity: 0;
+    transition: opacity 5000ms ease-in;
+  }
+
+  .GlitchingEffect{
+    opacity: 0;
+    transition: all 2s ease;
+    /* animation: Glitch .2s ease; */
+    /* filter: drop-shadow(3px 13px 10px green); */
+  }
+  /* @keyframes Glitch {
+    50%{
+      transform: translateY(100px) translateX(100px);
+    }
+  } */
