--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,360 @@
-::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
-  }
+::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
 
-.item{
+.item {
   color: blueviolet;
   font-size: large;
   background-color: yellow;
 }
 
 .item-enter {
-    opacity: 0;
-  }
-  .item-enter-active {
-    opacity: 1;
-    transition: opacity 500ms ease-in;
-  }
-  .item-exit {
-    opacity: 1;
-  }
-  .item-exit-active {
-    opacity: 0;
-    transition: opacity 5000ms ease-in;
-  }
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 5000ms ease-in;
+}
 
-  .GlitchingEffect{
-    opacity: 0;
-    transition: all 2s ease;
-    /* animation: Glitch .2s ease; */
-    /* filter: drop-shadow(3px 13px 10px green); */
-  }
-  /* @keyframes Glitch {
+.GlitchingEffect {
+  animation: cray 6s infinite steps(80);
+  /* opacity: 0;
+    transition: all 2s ease; */
+  /* animation: Glitch .2s ease; */
+  /* filter: drop-shadow(3px 13px 10px green); */
+}
+/* @keyframes Glitch {
     50%{
       transform: translateY(100px) translateX(100px);
     }
   } */
+
+@keyframes cray {
+  2% {
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+    /* font-family: "Bungee Shade", cursive; */
+  }
+  4% {
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: uppercase;
+    /* font-family: "PT Sans", sans-serif; */
+  }
+  6% {
+    font-weight: 500;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: capitalize;
+    /* font-family: "IM Fell DW Pica SC", serif; */
+  }
+  8% {
+    font-weight: 300;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+    /* font-family: "Lora", serif; */
+  }
+  10% {
+    font-weight: 600;
+    font-style: italic;
+    text-decoration: none;
+    /* font-family: 'Lilita One', cursive; */
+    text-transform: none;
+  }
+  12% {
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+    /* font-family: 'Fondamento', cursive; */
+    text-transform: none;
+  }
+  14% {
+    font-weight: 200;
+    font-style: normal;
+    text-decoration: none;
+    /* font-family: 'Bungee Shade', cursive; */
+    text-transform: none;
+  }
+  16% {
+    font-weight: 500;
+    /* font-family: 'IM Fell DW Pica SC', serif; */
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  18% {
+    font-weight: 600;
+    font-style: normal;
+    text-decoration: underline;
+    text-transform: uppercase;
+    /* font-family: 'Lobster', cursive; */
+  }
+  20% {
+    font-weight: 300;
+    font-style: normal;
+    /* font-family: 'Lilita One', cursive; */
+    text-decoration: none;
+    text-transform: none;
+
+  }
+  22% {
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    /* font-family: 'Fondamento', cursive; */
+    text-transform: none;
+  }
+  24% {
+    font-weight: 600;
+    /* font-family: 'Bungee Shade', cursive; */
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  26% {
+    font-weight: 700;
+    font-style: normal;
+    /* font-family: 'Lobster', cursive; */
+    text-decoration: line-through;
+    text-transform: none;
+  }
+  28% {
+    font-weight: 100;
+    font-style: normal;
+    text-decoration: line-through;
+    text-transform: none;
+    /* font-family: 'PT Sans', sans-serif; */
+  }
+  30% {
+    font-weight: 400;
+    font-style: italic;
+    /* font-family: 'Lilita One', cursive; */
+    text-decoration: underline;
+    text-transform: none;
+  }
+  32% {
+    /* font-family: 'Fondamento', cursive; */
+    font-weight: 200;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: lowercase;
+  }
+  34% {
+    font-weight: 400;
+    font-style: normal;
+    /* font-family: 'IM Fell DW Pica SC', serif; */
+    text-decoration: underline;
+    text-transform: none;
+  }
+  36% {
+    /* font-family: 'Bungee Shade', cursive; */
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  38% {
+    /* font-family: 'Fasthand', cursive; */
+    font-weight: 300;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  40% {
+    /* font-family: 'Fondamento', cursive; */
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: lowercase;
+  }
+  42% {
+    /* font-family: 'Lilita One', cursive; */
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  44% {
+    /* font-family: 'Lobster', cursive; */
+    font-weight: 100;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  46% {
+    /* font-family: 'Lora', serif; */
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: underline;
+    text-transform: none;
+  }
+  48% {
+    /* font-family: 'PT Sans', sans-serif; */
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: line-through;
+    text-transform: none;
+  }
+  50% {
+    /* font-family: 'Bungee Shade', cursive; */
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  52% {
+    font-weight: 100;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  54% {
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  56% {
+    font-weight: 200;
+    font-style: normal;
+    text-decoration: underline;
+    text-transform: none;
+  }
+  58% {
+    font-weight: 600;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  60% {
+    font-weight: 300;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  62% {
+    font-weight: 100;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: none;
+  }
+  64% {
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: underline;
+    text-transform: none;
+  }
+  66% {
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  68% {
+    font-weight: 600;
+    font-style: normal;
+    text-decoration: line-through;
+    text-transform: none;
+  }
+  70% {
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: capitalize;
+  }
+  72% {
+    font-weight: 400;
+    font-style: normal;
+    text-decoration: line-through;
+    text-transform: none;
+  }
+  74% {
+    font-weight: 700;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  76% {
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: line-through;
+    text-transform: capitalize;
+  }
+  78% {
+    font-weight: 200;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  80% {
+    font-weight: 400;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  82% {
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: line-through;
+    text-transform: none;
+  }
+  84% {
+    font-weight: 700;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  86% {
+    font-weight: 200;
+    font-style: italic;
+    text-decoration: none;
+    text-transform: none;
+  }
+  88% {
+    font-weight: 600;
+    font-style: normal;
+    text-decoration: line-through;
+    text-transform: capitalize;
+  }
+  90% {
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  92% {
+    font-weight: 600;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  94% {
+    font-weight: 600;
+    font-style: normal;
+    text-decoration: line-through;
+    text-transform: none;
+  }
+  96% {
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: none;
+  }
+  98% {
+    font-weight: 100;
+    font-style: normal;
+    text-decoration: none;
+    text-transform: capitalize;
+  }
+}
