--- a/src/components/batman/vegeance.module.css
+++ b/src/components/batman/vegeance.module.css
@@ -51,6 +51,8 @@ transition: all 1s ease-out;
   filter: drop-shadow(7px 8px 5px red);
   animation: Rise 20s ease;
 }
+.SignContainer{
+}
 .Signature{
   position: absolute;
   width: 300%;
@@ -60,6 +62,10 @@ transition: all 1s ease-out;
   padding:15%;
   background-color: rgb(233, 21, 21);
   animation: end 3s ease ;
+
+}
+.InfromationalTxt{
+  padding: 5px 20px;
 }
 @keyframes end {
   0%{
@@ -122,5 +128,10 @@ transition: all 1s ease-out;
     z-index: -1;
     width: 500px;
     height: 250px;
+  }
+}
+@media screen and (max-width:767px) {
+  .Infromation {
+    flex-direction: column;
   }
 }
