--- a/src/components/batman/vegeance.module.css
+++ b/src/components/batman/vegeance.module.css
@@ -52,11 +52,11 @@
 }
 .Signature {
   position: absolute;
-  width: 300%;
+  width: 250%;
   height: 100%;
   top: -20%;
   left: -190%;
-  padding: 15%;
+  padding:15% 45%;
   background-color: rgb(233, 21, 21);
   animation: end 3s ease;
 }
